refatoracao: remove regra de negocio e chamada desnecessaria do front na criacao de chamados
